--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
 
     
 
+<h1 id="news">News</h1>
+
+<ul>
+<li><p>Paper accepted at <strong>NDSS&rsquo;17</strong>: Automated Synthesis of Semantic Malware Signatures using Maximum Satisfiability. Yu Feng, Osbert Bastani, Ruben Martins, Isil Dillig, Saswat Anand.</p></li>
+
+<li><p>Paper accepted at <strong>POPL&rsquo;17</strong>: Component-Based Synthesis for Complex APIs. Yu Feng, Ruben Martins, Yuepeng Wang, Isil Dillig, Tom Reps.</p></li>
+
+<li><p>Paper accepted at <strong>FSE&rsquo;16</strong>: Hunter: Type-Directed Code Reuse using Integer Linear Programming. Yuepeng Wang, Yu Feng, Ruben Martins, Arati Kaushik, Isil Dillig, Steven P. Reiss.</p></li>
+
+<li><p><strong><a href="http://sat.inesc-id.pt/open-wbo/">Open-WBO</a></strong> was the best overall MaxSAT solver in the partial MaxSAT category of the <a href="http://maxsat.ia.udl.cat/introduction/">MaxSAT Evaluation 2016</a>.</p></li>
+</ul>
+
 <h1 id="biography">Biography</h1>
 
 <p>Ruben Martins is a postdoctoral researcher at the University of Texas at Austin,
@@ -221,15 +233,7 @@ solver that won several awards in the MaxSAT competitions.</p>
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">M.Sc. in Mathematics and Applications, 2008</p>
-              <p class="institution">University of Lisbon</p>
-            </div>
-          </li>
-          
-          <li>
-            <i class="fa-li fa fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">B.Sc. in Applied Mathematics and Computation, 2008</p>
+              <p class="course">M.Sc. and B.Sc. in Mathematics and Applications, 2008</p>
               <p class="institution">University of Lisbon</p>
             </div>
           </li>
