--- a/publication/index.html
+++ b/publication/index.html
@@ -135,7 +135,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://arxiv.org/abs/1608.06254">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.cs.utexas.edu/users/yufeng/papers/ndss17-astroid.pdf">
   PDF
 </a>
 
