--- a/public/publication/ndss17/index.html
+++ b/public/publication/ndss17/index.html
@@ -206,7 +206,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://arxiv.org/abs/1608.06254">
+<a class="btn btn-primary btn-outline" href="http://www.cs.utexas.edu/users/yufeng/papers/ndss17-astroid.pdf">
   PDF
 </a>
 
