--- a/public/index.html
+++ b/public/index.html
@@ -172,11 +172,11 @@
 <h1 id="news">News</h1>
 
 <ul>
-<li><p>Paper accepted at <strong>NDSS&rsquo;17</strong>: Automated Synthesis of Semantic Malware Signatures using Maximum Satisfiability. Yu Feng, Osbert Bastani, Ruben Martins, Isil Dillig, Saswat Anand.</p></li>
+<li><p>Paper accepted at <strong>NDSS&rsquo;17</strong>: <a href="http://www.cs.utexas.edu/users/yufeng/papers/ndss17-astroid.pdf">Automated Synthesis of Semantic Malware Signatures using Maximum Satisfiability</a>. Yu Feng, Osbert Bastani, Ruben Martins, Isil Dillig, Saswat Anand.</p></li>
 
-<li><p>Paper accepted at <strong>POPL&rsquo;17</strong>: Component-Based Synthesis for Complex APIs. Yu Feng, Ruben Martins, Yuepeng Wang, Isil Dillig, Tom Reps.</p></li>
+<li><p>Paper accepted at <strong>POPL&rsquo;17</strong>: <a href="http://www.cs.utexas.edu/users/yufeng/papers/sypet.pdf">Component-Based Synthesis for Complex APIs</a>. Yu Feng, Ruben Martins, Yuepeng Wang, Isil Dillig, Tom Reps.</p></li>
 
-<li><p>Paper accepted at <strong>FSE&rsquo;16</strong>: Hunter: Type-Directed Code Reuse using Integer Linear Programming. Yuepeng Wang, Yu Feng, Ruben Martins, Arati Kaushik, Isil Dillig, Steven P. Reiss.</p></li>
+<li><p>Paper accepted at <strong>FSE&rsquo;16</strong>: <a href="http://www.cs.utexas.edu/~isil/hunter.pdf">Hunter: Type-Directed Code Reuse using Integer Linear Programming</a>. Yuepeng Wang, Yu Feng, Ruben Martins, Arati Kaushik, Isil Dillig, Steven P. Reiss.</p></li>
 
 <li><p><strong><a href="http://sat.inesc-id.pt/open-wbo/">Open-WBO</a></strong> was the best overall MaxSAT solver in the partial MaxSAT category of the <a href="http://maxsat.ia.udl.cat/introduction/">MaxSAT Evaluation 2016</a>.</p></li>
 </ul>
@@ -282,7 +282,7 @@ solver that won several awards in the MaxSAT competitions.</p>
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://arxiv.org/abs/1608.06254">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.cs.utexas.edu/users/yufeng/papers/ndss17-astroid.pdf">
   PDF
 </a>
 
