--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <h1 id="news">News</h1>
 
 <ul>
-<li><p>Paper accepted at <strong>PLDI&rsquo;17</strong>: <a href="https://arxiv.org/pdf/1611.07502v1.pdf">Component-based Synthesis of Table Consolidation and Transformation Tasks from Examples</a> [arxiv version]. Yu Feng, Ruben Martins, Jacob VanGeffen, Isil Dillig, Swarat Chaudhuri.</p></li>
+<li><p>Paper accepted at <strong>PLDI&rsquo;17</strong>: <a href="https://arxiv.org/pdf/1611.07502v1.pdf">Component-based Synthesis of Table Consolidation and Transformation Tasks from Examples</a> [arxiv version]. Yu Feng, Ruben Martins, Jacob VanGeffen, Isil Dillig, Swarat Chaudhuri (to appear).</p></li>
 
 <li><p>Paper accepted at <strong>NDSS&rsquo;17</strong>: <a href="http://www.cs.utexas.edu/users/yufeng/papers/ndss17-astroid.pdf">Automated Synthesis of Semantic Malware Signatures using Maximum Satisfiability</a>. Yu Feng, Osbert Bastani, Ruben Martins, Isil Dillig, Saswat Anand.</p></li>
 
