--- a/public/publication/popl17/index.html
+++ b/public/publication/popl17/index.html
@@ -206,7 +206,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://www.cs.utexas.edu/users/yufeng/papers/sypet.pdf">
+<a class="btn btn-primary btn-outline" href="https://www.cs.utexas.edu/~isil/popl17-sypet-extended.pdf">
   PDF
 </a>
 
@@ -255,7 +255,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2016 Ruben Martins &middot; 
+      &copy; 2017 Ruben Martins &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
