--- a/public/404.html
+++ b/public/404.html
@@ -119,6 +119,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="https://sat-group.github.io/ruben/publication/pldi17/">Component-Based Synthesis of Table Consolidation and Transformation Tasks from Examples, PLDI 2017</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://sat-group.github.io/ruben/publication/ndss17/">Automated Synthesis of Semantic Malware Signatures using Maximum Satisfiability, NDSS 2017</a></li>
   </ul>
   
@@ -132,10 +136,6 @@
   
   <ul>
     <li><a href="https://sat-group.github.io/ruben/publication/fse16/">Hunter: Next-Generation Code Reuse for Java, FSE 2016</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://sat-group.github.io/ruben/publication/jsat15/">On Using Incremental Encodings in Unsatisfiability-based MaxSAT Solving, JSAT 2015</a></li>
   </ul>
   
   <ul>
@@ -164,7 +164,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2016 Ruben Martins &middot; 
+      &copy; 2017 Ruben Martins &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
