--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <h1 id="news">News</h1>
 
 <ul>
-<li><p>Checkout our Morpheus <a href="https://www.cs.utexas.edu/~isil/morpheus.mp4">video</a> at <strong>PLDI&rsquo;17</strong> on data preparation tasks!</p></li>
+<li><p>Check out our Morpheus <strong><a href="https://www.cs.utexas.edu/~isil/morpheus.mp4">video</a></strong> at <strong>PLDI&rsquo;17</strong> on data preparation tasks!</p></li>
 
 <li><p>Paper accepted at <strong>PLDI&rsquo;17</strong>: <a href="https://www.cs.utexas.edu/~yufeng/papers/pldi17-extend.pdf">Component-based Synthesis of Table Consolidation and Transformation Tasks from Examples</a>. Yu Feng, Ruben Martins, Jacob VanGeffen, Isil Dillig, Swarat Chaudhuri.</p></li>
 
@@ -641,7 +641,7 @@ consistently improved the state-of-the-art in MaxSAT solving. He is currently th
           <div class="card-text">
             <h4><a href="https://fredfeng.github.io/sypet/" target="_blank">Morpheus</a></h4>
             <div class="card-desription">
-              <p>Table Transformation Tasks</p>
+              <p>Data Preparation Tasks</p>
             </div>
           </div>
         </div>
