--- a/publication/index.html
+++ b/publication/index.html
@@ -211,7 +211,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.cs.utexas.edu/~isil/popl17-sypet-extended.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/papers/popl17-sypet-extended.pdf">
   PDF
 </a>
 
@@ -370,7 +370,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://sat.inesc-id.pt/~ruben/papers/martins-cp14.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/papers/cp14-open-wbo.pdf">
   PDF
 </a>
 
