--- a/publication/popl17/index.html
+++ b/publication/popl17/index.html
@@ -218,7 +218,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://www.cs.utexas.edu/~isil/popl17-sypet-extended.pdf">
+<a class="btn btn-primary btn-outline" href="https://sat-group.github.io/ruben/papers/popl17-sypet-extended.pdf">
   PDF
 </a>
 
