--- a/public/publication/cp14/index.html
+++ b/public/publication/cp14/index.html
@@ -218,7 +218,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://sat.inesc-id.pt/~ruben/papers/martins-cp14.pdf">
+<a class="btn btn-primary btn-outline" href="https://sat-group.github.io/ruben/papers/cp14-open-wbo.pdf">
   PDF
 </a>
 
