--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
 
 <li><p>Paper accepted at <strong>NDSS&rsquo;17</strong>: <a href="http://www.cs.utexas.edu/users/yufeng/papers/ndss17-astroid.pdf">Automated Synthesis of Semantic Malware Signatures using Maximum Satisfiability</a>. Yu Feng, Osbert Bastani, Ruben Martins, Isil Dillig, Saswat Anand.</p></li>
 
-<li><p>Paper accepted at <strong>POPL&rsquo;17</strong>: <a href="https://www.cs.utexas.edu/~isil/popl17-sypet-extended.pdf">Component-Based Synthesis for Complex APIs</a>. Yu Feng, Ruben Martins, Yuepeng Wang, Isil Dillig, Tom Reps.</p></li>
+<li><p>Paper accepted at <strong>POPL&rsquo;17</strong>: <a href="/ruben/papers/popl17-sypet-extended.pdf">Component-Based Synthesis for Complex APIs</a>. Yu Feng, Ruben Martins, Yuepeng Wang, Isil Dillig, Tom Reps.</p></li>
 
 <li><p><strong><a href="http://sat.inesc-id.pt/open-wbo/">Open-WBO</a></strong> was the best overall MaxSAT solver in the partial MaxSAT category of the <a href="http://maxsat.ia.udl.cat/introduction/">MaxSAT Evaluation 2016</a>.</p></li>
 </ul>
@@ -360,7 +360,7 @@ consistently improved the state-of-the-art in MaxSAT solving. He is currently th
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.cs.utexas.edu/~isil/popl17-sypet-extended.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/papers/popl17-sypet-extended.pdf">
   PDF
 </a>
 
@@ -480,7 +480,7 @@ consistently improved the state-of-the-art in MaxSAT solving. He is currently th
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://sat.inesc-id.pt/~ruben/papers/martins-cp14.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/papers/cp14-open-wbo.pdf">
   PDF
 </a>
 
