--- a/public/publication/pldi17/index.html
+++ b/public/publication/pldi17/index.html
@@ -224,7 +224,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://www.cs.utexas.edu/users/isil/morpheus.mp4">
+<a class="btn btn-primary btn-outline" href="https://sat-group.github.io/ruben/%28/ruben/files/morpheus.m4v%29">
   Video
 </a>
 
