--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
 <li><p><strong><a href="http://sat.inesc-id.pt/open-wbo/">Open-WBO</a></strong> now available at <a href="https://github.com/sat-group/open-wbo">GitHub</a>!</p></li>
 
-<li><p>Check out our Morpheus <strong><a href="https://www.cs.utexas.edu/~isil/morpheus.mp4">video</a></strong> at <strong>PLDI&rsquo;17</strong> on data preparation tasks!</p></li>
+<li><p>Check out our Morpheus <strong><a href="/ruben/files/morpheus.m4v">video</a></strong> at <strong>PLDI&rsquo;17</strong> on data preparation tasks!</p></li>
 
 <li><p>Paper accepted at <strong>PLDI&rsquo;17</strong>: <a href="https://www.cs.utexas.edu/~yufeng/papers/pldi17-extend.pdf">Component-based Synthesis of Table Consolidation and Transformation Tasks from Examples</a>. Yu Feng, Ruben Martins, Jacob VanGeffen, Isil Dillig, Swarat Chaudhuri.</p></li>
 
@@ -294,7 +294,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.cs.utexas.edu/users/isil/morpheus.mp4">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/%28/ruben/files/morpheus.m4v%29">
   Video
 </a>
 
