--- a/publication/index.html
+++ b/publication/index.html
@@ -153,7 +153,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.cs.utexas.edu/users/isil/morpheus.mp4">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/%28/ruben/files/morpheus.m4v%29">
   Video
 </a>
 
