--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/%28/ruben/files/morpheus.m4v%29">
+<a class="btn btn-primary btn-outline btn-xs" href="https://sat-group.github.io/ruben/files/morpheus.m4v">
   Video
 </a>
 
