--- a/public/404.html
+++ b/public/404.html
@@ -131,6 +131,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="https://sat-group.github.io/ruben/publication/pldi18/">Program Synthesis using Conflict-Driven Learning, PLDI 2018</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://sat-group.github.io/ruben/publication/pldi17/">Component-Based Synthesis of Table Consolidation and Transformation Tasks from Examples, PLDI 2017</a></li>
   </ul>
   
