--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -1598,8 +1598,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/ruben/media/oopsla20-zeus.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
