--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
 </li>
 <li>
 <p><strong>Distinguished paper award at FSE'21</strong>: 
-<a href="media/fse21-alloymax.pdf">AlloyMax: Bringing Maximum Satisfaction to Relational Specifications. Changjian Zhang, Ryan Wagner, Pedro Orvalho, David Garlan, Vasco Manquinho, Ruben Martins, Eunsuk Kang.</a> 
+<a href="media/fse21-alloymax.pdf">AlloyMax: Bringing Maximum Satisfaction to Relational Specifications.</a> Changjian Zhang, Ryan Wagner, Pedro Orvalho, David Garlan, Vasco Manquinho, Ruben Martins, Eunsuk Kang. 
 <a href="https://www.isri.cmu.edu/news/2021/0721-zhangzcmbp.html" target="_blank" rel="noopener">ISR press release.</a></p>
 </li>
 <li>
