--- a/public/publication/ase20/index.html
+++ b/public/publication/ase20/index.html
@@ -800,6 +800,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/danieltrt/UnchartIt" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
@@ -812,6 +820,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=OL2FbN6_BYg" target="_blank" rel="noopener">
+  Video
+</a>
 
 
 
