--- a/public/publication/oopsla20/index.html
+++ b/public/publication/oopsla20/index.html
@@ -817,6 +817,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=kEefoZ2sTho" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
