--- a/public/publication/rtns21/index.html
+++ b/public/publication/rtns21/index.html
@@ -314,7 +314,7 @@ In this paper, we present a formal model of a synchronization protocol between t
   
   "author": {
     "@type": "Person",
-    "name": "Ruben Martins"
+    "name": "Ruben Martins."
   },
   
   "publisher": {
