--- a/public/publication/vldb19/index.html
+++ b/public/publication/vldb19/index.html
@@ -310,7 +310,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Ruben Martins"
+    "name": "Ruben Martins."
   },
   
   "publisher": {
@@ -816,6 +816,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://youtu.be/OyPbIO4ttaw" target="_blank" rel="noopener">
+  Video
+</a>
 
 
 
