--- a/public/index.html
+++ b/public/index.html
@@ -1022,6 +1022,10 @@
 <p>Paper accepted at <strong>ICSE'21</strong>: 
 <a href="media/icse21-soar.pdf">SOAR: A Synthesis Approach for Data Science API Refactoring.</a> Ansong Ni, Daniel Ramos, Aidan Yang, Inês Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues.</p>
 </li>
+<li>
+<p>Handbook of Satisfiability, 2nd edition, Chapter 24 
+<a href="media/p02c24-mxm.pdf">Maximum Satisfiability.</a> Fahiem Bacchus, Matti Järvisalo, Ruben Martins.</p>
+</li>
 </ul>
 
 
