--- a/public/publication/sat13/index.html
+++ b/public/publication/sat13/index.html
@@ -310,7 +310,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Ruben Martins"
+    "name": "Ruben Martins."
   },
   
   "publisher": {
