--- a/publication/index.html
+++ b/publication/index.html
@@ -1592,7 +1592,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/ruben/publication/handbook-sat/" >Maximum Satisfiability, Handbook of Satisfiability, 2nd edition, Chapter 24</a>
+      <a href="/ruben/publication/handbook-sat/" >Handbook of Satisfiability, 2nd edition, Chapter 24: Maximum Satisfiability</a>
     </h3>
 
     
