--- a/index.html
+++ b/index.html
@@ -1819,10 +1819,12 @@
     <p><strong>PhD Students:</strong></p>
 <ul>
 <li>
-<a href="http://sat.inesc-id.pt/~drr/" target="_blank" rel="noopener">Daniel Ramos</a> (co-advised with Claire Le Goues and Vasco Manquinho)</li>
+<a href="http://sat.inesc-id.pt/~drr/" target="_blank" rel="noopener">Daniel Ramos</a> (ISR, Dual Degree CMU-Portugal, co-advised with Claire Le Goues and Vasco Manquinho)</li>
 <li>
-<a href="https://marghrid.github.io/" target="_blank" rel="noopener">Margarida Ferreira</a> (co-advised with Ines Lynce)</li>
-<li>Ricardo Brancas (co-advised with Vasco Manquinho)</li>
+<a href="https://marghrid.github.io/" target="_blank" rel="noopener">Margarida Ferreira</a> (CSD, Dual Degree CMU-Portugal, co-advised with Ines Lynce)</li>
+<li>Ricardo Brancas (CSD, Affiliated CMU-Portugal, co-advised with Vasco Manquinho)</li>
+<li>Aidan Yang (ISR, co-advised with Claire Le Goues and Vincent Hellendoorn)</li>
+<li>Sophia Kolak (ISR, co-advised with Claire Le Goues and Vincent Hellendoorn)</li>
 </ul>
 <p><strong>Alumni:</strong></p>
 <p>I am always happy to work with undergraduate students at CMU for either 
