--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 <p>Previous students that I mentored at CMU:</p>
 
 <ul>
-    <li>Joao Sa (CMU-Portugal Visting MSc Student, Fall 2023)</li>
+    <li>Joao Sa (CMU-Portugal Visiting MSc Student, Fall 2023)</li>
     <li>Aditi Pande (07-400, Spring 2023)</li>
     <li>Stephanie Eristoff (07-400, Spring 2023)</li>
     <li>Hailie Mitchell (REUSE, Summer 2022)</li>
@@ -561,7 +561,7 @@
     <li>Audrey Seo (REUSE, Summer 2019)</li>
     <li>Daniel Gibert Llaurado (Visiting PhD Student, Fall 2019)</li>
     <li>Aaron Meyers (Internship, Summer 2019)</li>
-    <li>Pedro Miguel Orvalho (Visiting MSc student., Spring 2019)</li>
+    <li>Pedro Miguel Orvalho (Visiting MSc student, Spring 2019)</li>
     <li>Rodrigo Bernado (Visiting MSc Student, Spring 2019)</li>
     <li>Yinglan Chen (SCS Independent Studies, Spring 2019)</li>
     <li>Clara Sellke (SCS Independent Studies, Fall 2018)</li>
