--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 <span class="phd-title"><b>Alumni:</b></span>
 
 <p>
-     I am always happy to work with undergraduate students at CMU for either <a href="https://csd.cmu.edu/cs-undergraduate-research-options">SCS Independent Studies</a>, <a href="https://cmu-research.github.io/07400-s24/">07-400</a>, during the Summer or the <a href="https://www.cmu.edu/scs/s3d/reuse/">REUSE program</a>.
+     I am always happy to do research with undergraduate students at CMU for either senior thesis, <a href="https://www.cs.cmu.edu/academics/undergraduate/research">SCS Independent Studies</a>, <a href="https://cmu-research.github.io/07400-s24/">07-400</a>, during the Summer or the <a href="https://www.cmu.edu/scs/s3d/reuse/">REUSE program</a>. I am also happy to work with Master's students for Independent Studies in the Computer Sciences (15-689) or for Master research theses (15-698). 
 </p>
 
 <p>Previous students that I mentored at CMU:</p>
@@ -575,7 +575,7 @@
     <li>Mayank Jai (SCS Independent Studies, Spring 2018)</li>
 </ul>
 
-<p>Contact me if you are an undergraduate student that wants to work on constraint solving, program verification or program synthesis.</p>
+<p>Contact me if you are an undergraduate or master student that wants to work on constraint solving, program verification or program synthesis.</p>
         </section>
         <section id="teaching">
             <h2>Teaching</h2>
