--- a/index.html
+++ b/index.html
@@ -161,18 +161,20 @@
             <img src="photo.jpg" alt="Ruben Martins">
         </div>
         <h1>Ruben Martins</h1>
-        <p>Assistant Research Professor at Carnegie Mellon University</p>
+        <p>Assistant Research Professor at Carnegie Mellon University<br>
+        Program Director of the Master of Science in Computer Science (MSCS)</p>
     </header>
     <nav>
         <a href="#bio">Biography</a>
         <a href="#publications">Publications</a>
         <a href="#students">Students</a>
         <a href="#teaching">Teaching</a>
+        <a href="#mscs">MSCS</a>
     </nav>
     <div class="container">
         <section id="bio">
             <h2>Biography</h2>
-            <p>Ruben Martins is an Assistant Research Professor at Carnegie Mellon University. His interests lie in the intersection of constraint programming with program synthesis, analysis, and verification. His recent research focuses on pushing the boundaries of program synthesis and enabling the technology to make programming and formal methods tools more accessible. Ruben received his Ph.D. with honors from the Technical University of Lisbon, Portugal (2013). He was a postdoctoral researcher at the University of Oxford, UK (2014-2015) and a postdoctoral researcher at UT Austin (2015-2017). He has published in top-tier venues, including POPL, PLDI, FSE, SAT, and CP. He has won a distinguished paper award at PLDI 2018 for his work on program synthesis, FSE 2021 for his work on optimization, and SAT 2022 for his work on verified encodings. He has also developed several award-winning constraint solvers. He is the leading developer of Open-WBO: an open-source Maximum Satisfiability (MaxSAT) solver that won several gold medals in MaxSAT competitions. Open-WBO is used to solve many real-world discrete optimization problems, including finding an optimal seating arrangement for his wedding.</p>
+            <p>Ruben Martins is an Assistant Research Professor at Carnegie Mellon University and the program director of the Master of Science in Computer Science. His interests lie in the intersection of constraint programming with program synthesis, analysis, and verification. His recent research focuses on pushing the boundaries of program synthesis and enabling the technology to make programming and formal methods tools more accessible. Ruben received his Ph.D. with honors from the Technical University of Lisbon, Portugal (2013). He was a postdoctoral researcher at the University of Oxford, UK (2014-2015) and a postdoctoral researcher at UT Austin (2015-2017). He has published in top-tier venues, including POPL, PLDI, FSE, SAT, and CP. He has won a distinguished paper award at PLDI 2018 for his work on program synthesis, FSE 2021 for his work on optimization, and SAT 2022 for his work on verified encodings. He has also developed several award-winning constraint solvers. He is the leading developer of Open-WBO: an open-source Maximum Satisfiability (MaxSAT) solver that won several gold medals in MaxSAT competitions. Open-WBO is used to solve many real-world discrete optimization problems, including finding an optimal seating arrangement for his wedding.</p>
         </section>
 
         <section id="publications">
@@ -182,6 +184,12 @@
             <div class="timeline-content">
                 <div class="timeline-year">2024</div>
                 <p></p>
+                <div class="paper">
+                    <div class="paper-authors">Bernardo Subercaseaux, John Mackey, Marijn J. H. Heule</div>
+                    <div class="paper-title">Automated Mathematical Discovery and Verification: Minimizing Pentagons in the Plane</div>
+                    <div class="paper-details">In International Conference on Intelligent Computer Mathematics (CICM'24), Springer, 2024.
+                    </div>
+                </div>
                 <div class="paper">
                     <div class="paper-authors">Aidan Z. H. Yang, Claire Le Goues, Ruben Martins, Vincent J. Hellendoorn</div>
                     <div class="paper-title">Large Language Models for Test-Free Fault Localization</div>
@@ -284,7 +292,7 @@
             <div class="paper-details">In International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS’21), Springer, 2021.</div>
         </div>
         <div class="paper">
-            <div class="paper-authors">Travis Hance, Marijn Heule, Ruben Martins, Bryan Parno</div>
+            <div class="paper-authors">Travis Hance, Marijn J. H. Heule, Ruben Martins, Bryan Parno</div>
             <div class="paper-title">Finding Invariants of Distributed Systems: It’s a Small (Enough) World After All</div>
             <div class="paper-details">In Network and Distributed System Security Symposium (NSDI’21), USENIX Association, 2021.</div>
         </div>
@@ -537,7 +545,6 @@
         <li><a href="https://marghrid.github.io/">Margarida Ferreira</a> (CSD, Dual Degree CMU-Portugal, co-advised with Ines Lynce)</li>
         <li><a href="https://www.ricardobrancas.com/">Ricardo Brancas</a> (CSD, Affiliated CMU-Portugal, co-advised with Vasco Manquinho)</li>
         <li><a href="https://aidanby.github.io/">Aidan Yang</a> (S3D, co-advised with Claire Le Goues)</li>
-        <li><a href="https://sophiakolak.github.io/">Sophia Kolak</a> (S3D, co-advised with Claire Le Goues)</li>
     </ul>
             
 <span class="phd-title"><b>Alumni:</b></span>
@@ -654,9 +661,25 @@
         </div>
 
         </section>
+    <section id="mscs">
+    <h2>MSCS</h2>
+    The Master of Science in Computer Science (MSCS) offers students with a bachelor's degree the opportunity to improve their training with advanced study in computer science. If you are interested in applying to the MSCS or want to know more about the program, please look at the following links:
+
+    <ul>
+        <li><a href="https://csd.cmu.edu/academics/masters/ms-in-computer-science">Program overview</a></li>
+        <li><a href="https://csd.cmu.edu/academics/masters/admissions">Application</a></li>
+        <li><a href="https://csd.cmu.edu/sites/default/files/2023-08/MSCS%20Handbook%202023-2024.pdf">Handbook AY 23-24</a></li>
+    </ul>
+    </ul>
+
+    <p>
+    For questions specific to the MSCS please do not email me directly but use the email:
+    <br>
+    <a href="mailto:csd-mscs-admissions@cs.cmu.edu">csd-mscs-admissions@cs.cmu.edu</a>
+    </p>
     </div>
     <footer>
-        <p>rubenm@cs.cmu.edu<br>
+        <p><a href="mailto:rubenm@cs.cmu.edu">rubenm@cs.cmu.edu</a><br>
             Carnegie Mellon University, 5000 Forbes Avenue<br>
             Gates Hillman Complex, GHC 7.129<br>
             Pittsburgh, PA 15213</p>
