--- a/index.html
+++ b/index.html
@@ -185,10 +185,15 @@
                 <div class="timeline-year">2024</div>
                 <p></p>
                 <div class="paper">
-                    <div class="paper-authors">Bernardo Subercaseaux, John Mackey, Marijn J. H. Heule</div>
+                    <div class="paper-authors">Bernardo Subercaseaux, John Mackey, Marijn J. H. Heule, Ruben Martins</div>
                     <div class="paper-title">Automated Mathematical Discovery and Verification: Minimizing Pentagons in the Plane</div>
                     <div class="paper-details">In International Conference on Intelligent Computer Mathematics (CICM'24), Springer, 2024.
                     </div>
+                </div>
+                <div class="paper">
+                    <div class="paper-authors">Daniel Ramos, Ines Lynce, Vasco Manquinho, Ruben Martins, Claire Le Goues</div>
+                    <div class="paper-title">BatFix: Repairing language model-based transpilation</div>
+                    <div class="paper-details">In Transactions on Software Engineering and Methodology (TOSEM'24), ACM, 2024.</div>
                 </div>
                 <div class="paper">
                     <div class="paper-authors">Aidan Z. H. Yang, Claire Le Goues, Ruben Martins, Vincent J. Hellendoorn</div>
@@ -292,7 +297,7 @@
             <div class="paper-details">In International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS’21), Springer, 2021.</div>
         </div>
         <div class="paper">
-            <div class="paper-authors">Travis Hance, Marijn J. H. Heule, Ruben Martins, Bryan Parno</div>
+            <div class="paper-authors">Travis Hance, Marijn Heule, Ruben Martins, Bryan Parno</div>
             <div class="paper-title">Finding Invariants of Distributed Systems: It’s a Small (Enough) World After All</div>
             <div class="paper-details">In Network and Distributed System Security Symposium (NSDI’21), USENIX Association, 2021.</div>
         </div>
