--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
                 <div class="timeline-year">2024</div>
                 <p></p>
                 <div class="paper">
+                    <div class="paper-authors">Margarida Ferreira, Akshay Narayan, Ranysha Ware, Yash Kothari, Ines Lynce, Ruben Martins, Justine Sherry</div>
+                    <div class="paper-title">Reverse-Engineering Congestion Control Algorithm Behavior</div>
+                    <div class="paper-details">In  Internet Measurement Conference (IMC'24), ACM, 2024.
+                    </div>
+                </div>
+                <div class="paper">
+                    <div class="paper-authors">Yoshiki Takashima, Chanhee Cho, Ruben Martins, Limin Jia, Corina Pasareanu</div>
+                    <div class="paper-title">Crabtree: Rust API Test Synthesis Guided by Coverage and Type</div>
+                    <div class="paper-details">In Object-Oriented Programming, Systems, Languages, and Applications 2024 (OOPSLA'24), ACM, 2024.
+                    </div>
+                </div>
+                <div class="paper">
                     <div class="paper-authors">Bernardo Subercaseaux, John Mackey, Marijn J. H. Heule, Ruben Martins</div>
                     <div class="paper-title">Automated Mathematical Discovery and Verification: Minimizing Pentagons in the Plane</div>
                     <div class="paper-details">In International Conference on Intelligent Computer Mathematics (CICM'24), Springer, 2024.
@@ -673,7 +685,7 @@
     <ul>
         <li><a href="https://csd.cmu.edu/academics/masters/ms-in-computer-science">Program overview</a></li>
         <li><a href="https://csd.cmu.edu/academics/masters/admissions">Application</a></li>
-        <li><a href="https://csd.cmu.edu/sites/default/files/2023-08/MSCS%20Handbook%202023-2024.pdf">Handbook AY 23-24</a></li>
+        <li><a href="https://csd.cmu.edu/sites/default/files/2024-08/mscs-handbook-2024-2025.pdf">Handbook AY 24-25</a></li>
     </ul>
     </ul>
 
