--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
                 <div class="timeline-year">2024</div>
                 <p></p>
                 <div class="paper">
+                    <div class="paper-authors">Darion Cassel, Nuno Sabino, Min-Chien Hsu, Ruben Martins, Limin Jia</div>
+                    <div class="paper-title">NODEMEDIC-FINE: Automatic Detection and Exploit Synthesis for Node.js Vulnerabilities</div>
+                    <div class="paper-details">In   Network and Distributed System Security Symposium (NDSS'24), The Internet Society, 2024.
+                    </div>
+                </div>
+                <div class="paper">
                     <div class="paper-authors">Margarida Ferreira, Akshay Narayan, Ranysha Ware, Yash Kothari, Ines Lynce, Ruben Martins, Justine Sherry</div>
                     <div class="paper-title">Reverse-Engineering Congestion Control Algorithm Behavior</div>
                     <div class="paper-details">In  Internet Measurement Conference (IMC'24), ACM, 2024.
