--- a/index.html
+++ b/index.html
@@ -265,21 +265,25 @@
                 <div class="paper">
                     <div class="paper-authors">Anup Agarwal, Venkat Arun, Devdeep Ray, Ruben Martins, Srinivasan Seshan</div>
                     <div class="paper-title">Automating network heuristic design and analysis</div>
-                    <div class="paper-details">In Workshop on Hot Topics in Networks (HotNets’22), ACM, 2022.</div>
+                    <div class="paper-details">In Workshop on Hot Topics in Networks (HotNets'22), ACM, 2022.</div>
                 </div>
                 <div class="paper">
                     <div class="paper-authors">Stephan Gocht, Ruben Martins, Jakob Nordström, Andy Oertel</div>
                     <div class="paper-title">Certified CNF Translations for Pseudo-Boolean Solving</div>
-                    <div class="paper-details">In International Conference on Theory and Applications of Satisfiability Testing (SAT’22), LIPIcs, 2022. <b>Best Paper Award.</b></div>
+                    <div class="paper-details">In International Conference on Theory and Applications of Satisfiability Testing (SAT'22), LIPIcs, 2022. <b>Best Paper Award.</b></div>
                 </div>
                 <div class="paper">
                     <div class="paper-authors">Francisco Pereira, Gonçalo Matos, Hugo Sadok, Daehyeok Kim, Ruben Martins, Justine Sherry, Fernando Ramos, Luis Pedrosa</div>
                     <div class="paper-title">Automatic generation of network function accelerators using component-based synthesis</div>
-                    <div class="paper-details">In ACM SIGCOMM Symposium on SDN Research (SOSR’22), ACM, 2022.</div>
+                    <div class="paper-details">In ACM SIGCOMM Symposium on SDN Research (SOSR'22), ACM, 2022.</div>
+                </div>
+                <div class="paper">
+                    <div class="paper-authors">Sophia D Kolak, Ruben Martins, Claire Le Goues, Vincent Josua Hellendoorn</div>
+                    <div class="paper-title">Patch Generation with Language Models: Feasibility and Scaling Behavior</div>
+                    <div class="paper-details">In Deep Learning for Code Workshop (DL4C @ ICLR'22), 2022.</div>
                 </div>
             </div>
             </li>
-
             <li class="timeline-item">
             <div class="timeline-content">
                 <div class="timeline-year">2021</div>
