--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
                     </div>
                 </div>
             </div>
+        </li>
+            <li class="timeline-item">
             <div class="timeline-content">
                 <div class="timeline-year">2024</div>
                 <p></p>
@@ -625,6 +627,9 @@
                 <p></p>
                 <div class="course-title">15-414/614 (Spring): Bug Catching: Automated Program Verification</div>
                 <a href="https://www.cs.cmu.edu/~15414/">Course Website</a>
+                <p></p>
+                <div class="course-title">07-300 (Fall): Research and Innovation in Computer Science</div>  
+                <a href="https://cmu-research.github.io/07300-f24/">Course Website</a>
             </div>
         </div>
 
