--- a/index.html
+++ b/index.html
@@ -185,6 +185,30 @@
                 <div class="timeline-year">2025</div>
                 <p></p>
                 <div class="paper">
+                    <div class="paper-authors">Ricardo Brancas, Vasco Manquinho, Ruben Martins</div>
+                    <div class="paper-title">Combining Logic and Large Language Models for Assisted Debugging
+                    and Repair of ASP Programs</div>
+                    <div class="paper-details">In International Conference on Software Testing, Verification and Validation (ICST'25), IEEE, 2025.
+                    </div>
+                </div>
+                <div class="paper">
+                    <div class="paper-authors">Aidan Z.H. Yang,
+                 Sophia Kolak, 
+                 Vincent Hellendoorn, 
+                 Ruben Martins, 
+                 Claire Le Goues</div>
+                    <div class="paper-title">Revisiting Unnaturalness for Automated Program Repair in
+               the Era of Large Language Models</div>
+                    <div class="paper-details">In International Conference on Software Engineering (ICSE’25), ACM, 2025.
+                    </div>
+                </div>
+                <div class="paper">
+                    <div class="paper-authors">Joseph E. Reeves, Joao Filipe, Min-Chien Hsu, Ruben Martins, Marijn J. H. Heule</div>
+                    <div class="paper-title">The Impact of Literal Sorting on Cardinality Constraint Encodings</div>
+                    <div class="paper-details">In AAAI Conference on Artificial Intelligence (AAAI'25), AAAI Press, 2025.
+                    </div>
+                </div>
+                <div class="paper">
                     <div class="paper-authors">Darion Cassel, Nuno Sabino, Min-Chien Hsu, Ruben Martins, Limin Jia</div>
                     <div class="paper-title">NODEMEDIC-FINE: Automatic Detection and Exploit Synthesis for Node.js Vulnerabilities</div>
                     <div class="paper-details">In   Network and Distributed System Security Symposium (NDSS'25), The Internet Society, 2025.
@@ -579,6 +603,11 @@
         <li><a href="https://www.ricardobrancas.com/">Ricardo Brancas</a> (CSD, Affiliated CMU-Portugal, co-advised with Vasco Manquinho)</li>
         <li><a href="https://aidanby.github.io/">Aidan Yang</a> (S3D, co-advised with Claire Le Goues)</li>
     </ul>
+
+<span class="phd-title"><b>Undergraduate Students:</b></span>
+<ul>
+    <li><a href="https://www.linkedin.com/in/weiran-shirley-yu-2a1a76279">Shirley Yu</a> (CSD, Senior Thesis, 2024-2025)</li>
+</ul>
             
 <span class="phd-title"><b>Alumni:</b></span>
 
@@ -589,6 +618,8 @@
 <p>Previous students that I mentored at CMU:</p>
 
 <ul>
+    <li>Martim Afonso (CMU-Portugal Visiting PhD Student, Fall 2024)</li>
+    <li>Sophia Kolak (S3D, MSc Student, 2021-2024)</li>
     <li>Joao Sa (CMU-Portugal Visiting MSc Student, Fall 2023)</li>
     <li>Aditi Pande (07-400, Spring 2023)</li>
     <li>Stephanie Eristoff (07-400, Spring 2023)</li>
